--- a/README.org
+++ b/README.org
@@ -119,6 +119,7 @@ class DocumentIndex:
 DeepEval Contextual Relevancy
 -----------------------------
 Score: {evaluation.score}
+Contexts: {evaluation.contexts}
 Explanation:
 {evaluation.feedback}
       """)
